# madl

./: Cargo.toml  README.md  madl.cfg
src/: lib.rs  main.rs
