[package]
name = "madl"
version = "0.1.0"
authors = ["Jaroslav Jurecka <jaroslavjurecka@eaton.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
rev_lines = "0.2"
hotwatch = "0.4"
